start fixing chat page on mobile

--- a/app/scss/components/messages.scss
+++ b/app/scss/components/messages.scss
@@ -14,6 +14,10 @@
   margin-bottom: 14px;
 }
 
+.messages-input {
+  margin-top: 12px;
+}
+
 .chat-message {
   @include box-shadow(0 2px 2px rgba(0, 0, 0, 0.08));
   max-width: 318px;
